<resources>
    <string name="app_name">PhotoManager</string>
    <string name="album">相册</string>
    <string name="other">其他</string>
    <string name="collect">收藏</string>
    <string name="secret">私密</string>
    <string name="photograph">相机</string>
    <string name="inputPassword">输入密码</string>
    <string name="guide_title1">智能分类，高效云备份</string>
    <string name="guide_title2">你的回忆，由我守护</string>
    <string name="open">去开启</string>
    <string name="home">Home</string>
    <string name="intelligent">Sort</string>
    <string name="cloudAlbum">Cloud</string>
    <string name="personalCenter">Me</string>
    <string name="myAlbum">My Album</string>
    <string name="arrangement">Sorted</string>
    <string name="scanning">正在扫描图片...</string>
    <string name="backups">备份</string>
    <string name="checkPhoto">输入搜索的图片</string>
    <string name="GIF">GIF</string>
    <string name="type">类型</string>
    <string name="character">人物</string>
    <string name="Cartoon">卡通</string>
    <string name="location">地点</string>
    <string name="GZ">广州</string>
    <string name="SZ">深圳</string>
    <string name="BJ">北京</string>
    <string name="SH">上海</string>
    <string name="clickToLogin">Not logged in</string>
    <string name="xxxM">500M备份空间，照片永不丢失</string>
    <string name="expand">Expand</string>
    <string name="myCloud">Photo</string>
    <string name="myFile">Album</string>
    <string name="userName">用户名称</string>
    <string name="spaceUsed">0M/500M  空间使用0%</string>
    <string name="phoneClean">手机瘦身</string>
    <string name="cancel">Cancel</string>
    <string name="arrange">整理</string>
    <string name="more">更多</string>
    <string name="delete">删除</string>
    <string name="Sort_to_Album">Sort to</string>
    <string name="add_album">Add Album</string>
    <string name="select">Selected</string>
    <string name="add_existing_albums">Add albums</string>
    <string name="create">create</string>
    <string name="select_all">Select all</string>
    <string name="cancel_select">Cancel select</string>
    <string name="please_select">Please select</string>
    <string name="time">July26,2018</string>
    <string name="sort_to_new_album">Sort to New Album</string>
    <string name="sort_to_new_album_content">Create a New album and sort this photo</string>
    <string name="sort">Sort</string>
    <string name="hint">Input Album Name</string>
    <string name="login_or_register">Login/Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="phone">Phone:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registration_success">registration success</string>
    <string name="success">success</string>
    <string name="failure">failure</string>
    <string name="private_album">Private Album</string>
    <string name="album_clean">Album Cleaning</string>
    <string name="settings">Settings</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_password">Create Password</string>
    <string name="encrypting">Encrypting</string>
    <string name="please_wait">Please wait...</string>
    <string name="go_album">Go Album</string>
    <string name="guard">Guard your memories</string>
    <string name="space_size">M/500M</string>
    <string name="click_login">Click to Login</string>
    <string name="setting">setting</string>
</resources>
