<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/login_activity_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/activity_show_back_btn_normal" />

        <TextView
            android:id="@+id/login_activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_or_register"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_activity_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="25dp"
                android:text="@string/phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circle_button"
                android:id="@+id/login_activity_phone"
                />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_button"
                android:id="@+id/login_activity_password"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp">

        <Button
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/circle_button"
            android:text="@string/login"
            android:id="@+id/login_activity_login"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_button"
            android:text="@string/register"
            android:id="@+id/login_activity_register"/>
    </LinearLayout>
</RelativeLayout>