<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/personal_fragment_icon"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go Album"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/personal_fragment_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:id="@+id/personal_fragment_name"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/personal_fragment_name"
        android:layout_centerHorizontal="true"
        android:id="@+id/personal_fragment_rl">
        <ProgressBar
            android:id="@+id/personal_fragment_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/personal_fragment_xxxM"
            android:progress="0"
            android:layout_marginLeft="50dp"
            />
        <TextView
            android:id="@+id/personal_fragment_xxxM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0M/500M"
            android:textSize="12sp"
            android:layout_marginLeft="50dp"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/circle_button"
            android:layout_marginRight="50dp"
            android:text="@string/expand"
            />
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_below="@id/personal_fragment_rl"
        android:id="@+id/personal_fragment_gl">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:id="@+id/personal_fragment_private_album"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_lock_b" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:text="@string/private_album"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_clean" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/album_clean"
                android:layout_marginVertical="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_settings_b" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings"
                android:layout_marginVertical="10dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </GridLayout>


</RelativeLayout>